# runa

./: CLAUDE.md  LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
i18n/: de.json  en.json  es.json  fr.json  ja.json  pt.json  zh-CN.json
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  mobile.json
src-tauri/icons/: icon.icns
src-tauri/src/: ai.rs  clipboard.rs  commands.rs  config.rs  git.rs  git_commands.rs  lib.rs  main.rs  notes.rs  preview.rs  rate_limit.rs  search.rs  state.rs  types.rs  utils.rs  watcher.rs
src/components/ai/: AiEditModal.tsx  AiResponseToast.tsx
src/components/backlinks/: BacklinksPanel.tsx
src/components/command-palette/: CommandPalette.tsx
src/components/editor/: Editor.tsx  LinkEditor.tsx  SearchToolbar.tsx  SlashCommand.tsx  SlashCommandList.tsx  WikilinkSuggestionList.tsx
src/components/icons/: index.tsx
src/components/layout/: FolderPicker.tsx  Footer.tsx  Sidebar.tsx
src/components/notes/: NoteList.tsx
src/components/preview/: PreviewApp.tsx
src/components/settings/: AboutSettingsSection.tsx  EditorSettingsSection.tsx  GeneralSettingsSection.tsx  SettingsPage.tsx  ShortcutsSettingsSection.tsx
src/components/trash/: TrashModal.tsx
src/components/ui/: AlertDialog.tsx  FloatingActionButton.tsx  index.tsx
src/context/: NotesContext.tsx
src/lib/: i18n.ts  platform.ts  usePullToRefresh.ts  useSwipeGesture.ts
src/services/: ai.ts  git.ts  notes.ts
src/types/: note.ts
