[package]
name = "Runa"
version = "0.2.0"
description = "An offline markdown-based notes app"
authors = ["brenogonzaga"]
edition = "2021"

[lib]
name = "runa_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Core dependencies (all platforms)
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-store = "2.4.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tantivy = "0.22"
tokio = { version = "1", features = ["fs", "sync"] }
base64 = "0.22"
url = "2"
urlencoding = "2"
regex = "1"
walkdir = "2"
chrono = "0.4"
once_cell = "1.21"

# Desktop-only dependencies
[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
tauri-plugin-single-instance = "2"
notify = "6"
open = "5"
